--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "nodemon api/server.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -38,14 +39,21 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-oauth/google": "^0.12.2",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cors": "^2.8.5",
     "date-fns": "3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
+    "express": "^5.1.0",
+    "google-auth-library": "^10.1.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.16.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
@@ -67,11 +75,12 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "normalize-range": "^0.1.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "nodemon": "^3.1.10",
+    "normalize-range": "^0.1.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
